--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "router-practice",
+  "name": "router-auth-context",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
